--- a/style.css
+++ b/style.css
@@ -29,6 +29,21 @@
 	animation-iteration-count: 3;
 }
 
+.timing_animation{
+	margin-left: 14em;
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    position: relative;
+	animation-name: bounce;
+    animation-duration: 4s;
+	animation-iteration-count: 3;
+}
+
+
+
+
+
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes example {
     0%   {background-color:red; left:0px; top:0px;}
@@ -46,6 +61,38 @@
     75%  {background-color:green; left:0px; top:200px;}
     100% {background-color:red; left:0px; top:0px;}
 }
+
+
+
+
+@keyframes bounce {
+
+  from {
+    top: 100px;
+    animation-timing-function: ease-out;
+  }
+
+  25% {
+    top: 50px;
+    animation-timing-function: ease-in;
+  }
+
+  50% {
+    top: 100px;
+    animation-timing-function: ease-out;
+  }
+
+  75% {
+    top: 75px;
+    animation-timing-function: ease-in;
+  }
+
+  to {
+    top: 100px;
+  }
+
+}
+
 
 
 
