--- a/style.css
+++ b/style.css
@@ -348,3 +348,35 @@ body{
         display: inline-block;
         -webkit-transform: translate3d(0, 0%, 0);
                 transform: translate3d(0, 0%, 0); } }
+				
+				
+				
+.menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.menu-item {
+    float: left;
+}
+
+.menu-item a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+.menu-item a:hover {
+    background-color: #111;
+}
+table{
+	width: 100%;
+	text-align: left;
+	table-layout: fixed;
+}
